Set the width of the logo element to be the same as Kibana 4 to avoid truncating plugin logos

--- a/src/ui/public/kibi/styles/kibi.less
+++ b/src/ui/public/kibi/styles/kibi.less
@@ -65,7 +65,7 @@ div#kibi-primary-navbar {
     background-size: auto 41px;
     background-position: 2px center;
     background-color: #222222;
-    width: 202px;
+    width: 252px;
   }
   .logo-small {
     background-image: url('../images/no_border_sm@2x.png');
